# lerobot-for-umi

./: .gitignore  create_g2_dataset_using_lerobot.py  example_pi05_stats.json  pyproject.toml
src/lerobot/robots/g2/G2/genie_robot/: CMakeLists.txt  README.md
src/lerobot/robots/g2/G2/genie_robot/launch/: display.launch.py
src/lerobot/robots/g2/G2/genie_robot/meshes/G2/T2/: base_link.fbx  body_link1.1.STL  body_link1.2.STL  body_link1.STL  body_link1.fbx  body_link2.STL  body_link2.fbx  body_link3.STL  body_link3.fbx  body_link4.STL  body_link4.fbx  body_link5.STL  body_link5.fbx  chassis_lwheel_front_link1.STL  chassis_lwheel_front_link1.fbx  chassis_lwheel_front_link2.STL  chassis_lwheel_front_link2.fbx  chassis_lwheel_rear_link1.STL  chassis_lwheel_rear_link1.fbx  chassis_lwheel_rear_link2.STL  chassis_lwheel_rear_link2.fbx  chassis_rwheel_front_link1.STL  chassis_rwheel_front_link1.fbx  chassis_rwheel_front_link2.STL  chassis_rwheel_front_link2.fbx  chassis_rwheel_rear_link1.STL  chassis_rwheel_rear_link1.fbx  chassis_rwheel_rear_link2.STL  chassis_rwheel_rear_link2.fbx  head_link1.STL  head_link1.fbx  head_link2.STL  (+3 more)
src/lerobot/robots/g2/G2/genie_robot/meshes/arm/: BASE_P6.STL  Link1_P6.STL  Link2_P6.STL  Link2_P6.fbx  Link2_P6_r.fbx  Link3_P6.STL  Link4_P6.STL  Link5_P6.STL  Link6_P6.STL  Link7_P6.STL  finger_1_link.STL  finger_1_link_mirror.STL  finger_2_link.STL  finger_2_link_mirror.STL  gripper_link.STL  gripper_link_mirror.STL
src/lerobot/robots/g2/G2/genie_robot/rviz/: default.rviz
src/lerobot/robots/g2/G2/genie_robot/urdf/G2_t2_crs/: model.srdf
(+40 files in other folders)
